// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`integration alphabet.test.tab 1`] = `
Object {
  "lines": Array [
    Object {
      "id": 1,
      "row": Array [
        "a",
      ],
      "state": "note",
      "text": "a",
    },
    Object {
      "id": 2,
      "row": Array [
        "b",
      ],
      "state": "note",
      "text": "b",
    },
    Object {
      "id": 3,
      "row": Array [
        "c",
      ],
      "state": "note",
      "text": "c",
    },
    Object {
      "id": 4,
      "row": Array [
        "d",
      ],
      "state": "note",
      "text": "d",
    },
    Object {
      "id": 5,
      "row": Array [
        "e",
      ],
      "state": "note",
      "text": "e",
    },
    Object {
      "id": 6,
      "row": Array [
        "f",
      ],
      "state": "note",
      "text": "f",
    },
    Object {
      "id": 7,
      "row": Array [
        "g",
      ],
      "state": "note",
      "text": "g",
    },
    Object {
      "id": 8,
      "row": Array [
        "h",
      ],
      "state": "note",
      "text": "h",
    },
    Object {
      "id": 9,
      "row": Array [
        "i",
      ],
      "state": "note",
      "text": "i",
    },
    Object {
      "id": 10,
      "row": Array [
        "j",
      ],
      "state": "note",
      "text": "j",
    },
    Object {
      "id": 11,
      "row": Array [
        "k",
      ],
      "state": "note",
      "text": "k",
    },
    Object {
      "id": 12,
      "row": Array [
        "l",
      ],
      "state": "note",
      "text": "l",
    },
    Object {
      "id": 13,
      "row": Array [
        "m",
      ],
      "state": "note",
      "text": "m",
    },
    Object {
      "id": 14,
      "row": Array [
        "n",
      ],
      "state": "note",
      "text": "n",
    },
    Object {
      "id": 15,
      "row": Array [
        "o",
      ],
      "state": "note",
      "text": "o",
    },
    Object {
      "id": 16,
      "row": Array [
        "p",
      ],
      "state": "note",
      "text": "p",
    },
    Object {
      "id": 17,
      "row": Array [
        "q",
      ],
      "state": "note",
      "text": "q",
    },
    Object {
      "id": 18,
      "row": Array [
        "r",
      ],
      "state": "note",
      "text": "r",
    },
    Object {
      "id": 19,
      "row": Array [
        "s",
      ],
      "state": "note",
      "text": "s",
    },
    Object {
      "id": 20,
      "row": Array [
        "t",
      ],
      "state": "note",
      "text": "t",
    },
    Object {
      "id": 21,
      "row": Array [
        "u",
      ],
      "state": "note",
      "text": "u",
    },
    Object {
      "id": 22,
      "row": Array [
        "v",
      ],
      "state": "note",
      "text": "v",
    },
    Object {
      "id": 23,
      "row": Array [
        "w",
      ],
      "state": "note",
      "text": "w",
    },
    Object {
      "id": 24,
      "row": Array [
        "x",
      ],
      "state": "note",
      "text": "x",
    },
    Object {
      "id": 25,
      "row": Array [
        "y",
      ],
      "state": "note",
      "text": "y",
    },
    Object {
      "id": 26,
      "row": Array [
        "z",
      ],
      "state": "note",
      "text": "z",
    },
  ],
  "meta": Object {
    "columnMap": Object {
      "text": 0,
    },
    "delimiter": "	",
    "header": undefined,
    "newline": "
",
  },
}
`;

exports[`integration colors.test.tab 1`] = `
Object {
  "lines": Array [
    Object {
      "id": 1,
      "row": Array [
        "C",
        "cyan",
      ],
      "state": "note",
      "text": "cyan",
    },
    Object {
      "id": 2,
      "row": Array [
        "M",
        "magenta",
      ],
      "state": "note",
      "text": "magenta",
    },
    Object {
      "id": 3,
      "row": Array [
        "Y",
        "yellow",
      ],
      "state": "note",
      "text": "yellow",
    },
    Object {
      "id": 4,
      "row": Array [
        "K",
        "key",
      ],
      "state": "note",
      "text": "key",
    },
  ],
  "meta": Object {
    "columnMap": Object {
      "text": 1,
    },
    "delimiter": "	",
    "header": Array [
      "letter",
      "text",
    ],
    "newline": "
",
  },
}
`;

exports[`integration digits.test.tab 1`] = `
Object {
  "lines": Array [
    Object {
      "id": 1,
      "row": Array [
        "1",
      ],
      "state": "divider",
      "text": undefined,
    },
    Object {
      "id": 2,
      "row": Array [
        "2",
      ],
      "state": "divider",
      "text": undefined,
    },
    Object {
      "id": 3,
      "row": Array [
        "3",
      ],
      "state": "divider",
      "text": undefined,
    },
    Object {
      "id": 4,
      "row": Array [
        "",
      ],
      "state": "divider",
      "text": undefined,
    },
  ],
  "meta": Object {
    "columnMap": Object {
      "text": 1,
    },
    "delimiter": "	",
    "header": undefined,
    "newline": "
",
  },
}
`;

exports[`integration empty.test.tab 1`] = `
Object {
  "lines": Array [],
  "meta": Object {
    "columnMap": Object {
      "text": 0,
    },
    "delimiter": "	",
    "header": undefined,
    "newline": "
",
  },
}
`;

exports[`integration games.test.tab 1`] = `
Object {
  "lines": Array [
    Object {
      "id": 1,
      "row": Array [
        "",
      ],
      "state": "divider",
      "text": "",
    },
    Object {
      "id": 2,
      "row": Array [
        "Nintendo Entertainment System",
        "1985",
        "https://wikipedia.org/wiki/Nintendo_Entertainment_System",
      ],
      "state": "note",
      "text": "Nintendo Entertainment System",
    },
    Object {
      "id": 3,
      "row": Array [
        "- Mega Man 6",
        "1994",
        "https://wikipedia.org/wiki/Mega_Man_6",
      ],
      "state": "note",
      "text": "- Mega Man 6",
    },
    Object {
      "id": 4,
      "row": Array [
        "- Solar Jetman: Hunt for the Golden Warpship",
        "1990",
        "https://wikipedia.org/wiki/Solar_Jetman",
      ],
      "state": "note",
      "text": "- Solar Jetman: Hunt for the Golden Warpship",
    },
    Object {
      "id": 5,
      "row": Array [
        "- Super Mario Bros. 3",
        "1989",
        "https://wikipedia.org/wiki/Super_Mario_Bros._3",
      ],
      "state": "note",
      "text": "- Super Mario Bros. 3",
    },
    Object {
      "id": 6,
      "row": Array [
        "- Teenage Mutant Ninja Turtles III: The Manhattan Project",
        "1992",
        "https://wikipedia.org/wiki/Teenage_Mutant_Ninja_Turtles_III:_The_Manhattan_Project",
      ],
      "state": "note",
      "text": "- Teenage Mutant Ninja Turtles III: The Manhattan Project",
    },
    Object {
      "id": 7,
      "row": Array [
        "- The Guardian Legend",
        "1989",
        "https://wikipedia.org/wiki/The_Guardian_Legend",
      ],
      "state": "note",
      "text": "- The Guardian Legend",
    },
    Object {
      "id": 8,
      "row": Array [
        "",
      ],
      "state": "divider",
      "text": "",
    },
    Object {
      "id": 9,
      "row": Array [
        "PC",
      ],
      "state": "note",
      "text": "PC",
    },
    Object {
      "id": 10,
      "row": Array [
        "- Red Dead Redemption 2",
        "2018",
        "https://wikipedia.org/wiki/Red_Dead_Redemption_2",
      ],
      "state": "note",
      "text": "- Red Dead Redemption 2",
    },
    Object {
      "id": 11,
      "row": Array [
        "",
      ],
      "state": "divider",
      "text": "",
    },
    Object {
      "id": 12,
      "row": Array [
        "PlayStation 3",
        "2006",
        "https://wikipedia.org/wiki/PlayStation_3",
      ],
      "state": "note",
      "text": "PlayStation 3",
    },
    Object {
      "id": 13,
      "row": Array [
        "- Ico (The Ico & Shadow of the Colossus Collection)",
        "2001",
        "https://wikipedia.org/wiki/The_Ico_%26_Shadow_of_the_Colossus_Collection",
      ],
      "state": "note",
      "text": "- Ico (The Ico & Shadow of the Colossus Collection)",
    },
    Object {
      "id": 14,
      "row": Array [
        "- Metal Gear Solid 2: Sons of Liberty (Metal Gear Solid HD Collection)",
        "2001",
        "https://wikipedia.org/wiki/Metal_Gear_Solid_HD_Collection",
      ],
      "state": "note",
      "text": "- Metal Gear Solid 2: Sons of Liberty (Metal Gear Solid HD Collection)",
    },
    Object {
      "id": 15,
      "row": Array [
        "- Shadow of the Colossus (The Ico & Shadow of the Colossus Collection)",
        "2005",
        "https://wikipedia.org/wiki/The_Ico_%26_Shadow_of_the_Colossus_Collection",
      ],
      "state": "note",
      "text": "- Shadow of the Colossus (The Ico & Shadow of the Colossus Collection)",
    },
    Object {
      "id": 16,
      "row": Array [
        "",
      ],
      "state": "divider",
      "text": "",
    },
    Object {
      "id": 17,
      "row": Array [
        "PlayStation 4",
        "2013",
        "https://wikipedia.org/wiki/PlayStation_4",
      ],
      "state": "note",
      "text": "PlayStation 4",
    },
    Object {
      "id": 18,
      "row": Array [
        "- The Last of Us Remastered",
        "2013",
        "https://wikipedia.org/wiki/The_Last_of_Us#The_Last_of_Us_Remastered",
      ],
      "state": "note",
      "text": "- The Last of Us Remastered",
    },
    Object {
      "id": 19,
      "row": Array [
        "",
      ],
      "state": "divider",
      "text": "",
    },
    Object {
      "id": 20,
      "row": Array [
        "Super Nintendo",
        "1991",
        "https://wikipedia.org/wiki/Super_Nintendo_Entertainment_System",
      ],
      "state": "note",
      "text": "Super Nintendo",
    },
    Object {
      "id": 21,
      "row": Array [
        "- EarthBound",
        "1995",
        "https://wikipedia.org/wiki/EarthBound",
      ],
      "state": "note",
      "text": "- EarthBound",
    },
    Object {
      "id": 22,
      "row": Array [
        "",
      ],
      "state": "divider",
      "text": "",
    },
    Object {
      "id": 23,
      "row": Array [
        "Switch",
      ],
      "state": "note",
      "text": "Switch",
    },
    Object {
      "id": 24,
      "row": Array [
        "- The Legend of Zelda: Breath of the Wild",
        "2017",
        "https://wikipedia.org/wiki/The_Legend_of_Zelda:_Breath_of_the_Wild",
      ],
      "state": "note",
      "text": "- The Legend of Zelda: Breath of the Wild",
    },
    Object {
      "id": 25,
      "row": Array [
        "",
      ],
      "state": "divider",
      "text": "",
    },
  ],
  "meta": Object {
    "columnMap": Object {
      "text": 0,
    },
    "delimiter": "	",
    "header": Array [
      "text",
      "year",
      "wiki",
    ],
    "newline": "
",
  },
}
`;

exports[`integration groceries.test.tab 1`] = `
Object {
  "lines": Array [
    Object {
      "id": 1,
      "row": Array [
        "Produce",
      ],
      "state": "note",
      "text": "Produce",
    },
    Object {
      "id": 2,
      "row": Array [
        "[] Cucumber",
      ],
      "state": "note",
      "text": "[] Cucumber",
    },
    Object {
      "id": 3,
      "row": Array [
        "",
      ],
      "state": "divider",
      "text": "",
    },
    Object {
      "id": 4,
      "row": Array [
        "Snacks",
      ],
      "state": "note",
      "text": "Snacks",
    },
    Object {
      "id": 5,
      "row": Array [
        "[x] Pretzels",
      ],
      "state": "note",
      "text": "[x] Pretzels",
    },
    Object {
      "id": 6,
      "row": Array [
        "",
      ],
      "state": "divider",
      "text": "",
    },
    Object {
      "id": 7,
      "row": Array [
        "Frozen",
      ],
      "state": "note",
      "text": "Frozen",
    },
    Object {
      "id": 8,
      "row": Array [
        "[x] Ice Cream",
      ],
      "state": "note",
      "text": "[x] Ice Cream",
    },
    Object {
      "id": 9,
      "row": Array [
        "[x] Pizza",
      ],
      "state": "note",
      "text": "[x] Pizza",
    },
    Object {
      "id": 10,
      "row": Array [
        "",
      ],
      "state": "divider",
      "text": "",
    },
  ],
  "meta": Object {
    "columnMap": Object {
      "text": 0,
    },
    "delimiter": "	",
    "header": undefined,
    "newline": "
",
  },
}
`;
